# ai_engineer_path

./: .gitignore  README.md  compose.yaml  makefile  pyproject.toml
deployment/: Dockerfile
docs/: EXPLANATIONS.md
src/: load_recipes.py  main.py
src/ai/: constants.py  embeddings.py  llms.py  vectordb.py
src/ai/agents/: conversational.py  recipe_image.py  recipe_retriever.py
src/ai/models/: diffusals.py  embeddings.py  llm.py
src/ai/tools/: base.py  recipes.py
src/ai/vectordb/: base.py  chromadb.py  schemas.py
src/ai/vectordb/pgvector/: models.py  pgvector.py  repositories.py
src/migrations/: migrations.py
src/migrations/versions/: 001_create_embeddings_table.sql
src/ui/: chatbot.py
src/utils/: loaders.py  logging.py  paths.py  relational_database.py
