[project]
name = "ai-engineer-path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "openai>=1.63.2",
    "pgvector>=0.3.6",
    "psycopg>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
]
